@@ -36,7 +36,6 @@ function Config.newPlayerSettings(player)
     camera.trackers = {trackers[1], trackers[2], trackers[3]}
 
     return {
-        screenshotNumber = 1,
         -- Setup a default camera and attach trackers to it
         cameras = {camera},
         trackers = trackers
