@@ -3,6 +3,8 @@ Version: 1.4.4
 
   Minor Features:
     - Store screenshots in a sub-directory if the camera name contains a slash.
+  Bugfixes:
+    - Each camera must have its own sequential numbering when enabled.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.3
